--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,7 +18,7 @@ android {
     }
     defaultConfig {
         applicationId "com.mygdx.game"
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -88,3 +88,11 @@ task run(type: Exec) {
     def adb = path + "/platform-tools/adb"
     commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.mygdx.game/com.mygdx.game.AndroidLauncher'
 }
+
+dependencies {
+    implementation 'com.google.firebase:firebase-database:19.2.1'
+}
+
+apply plugin: 'com.google.gms.google-services'
+
+
