--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
-        
+        classpath 'com.google.gms:google-services:4.3.3'
+
 
     }
 }
@@ -40,11 +41,13 @@ allprojects {
 
 project(":android") {
     apply plugin: "android"
+    apply plugin: 'com.android.application'
 
     configurations { natives }
 
     dependencies {
         implementation project(":core")
+        implementation 'com.google.firebase:firebase-analytics:17.2.3'
         api "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
@@ -57,6 +60,7 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86_64"
+        implementation 'com.google.firebase:firebase-database:19.2.1'
         
     }
 }
@@ -64,10 +68,11 @@ project(":android") {
 project(":core") {
     apply plugin: "java-library"
 
-
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        implementation 'com.google.firebase:firebase-analytics:17.2.3'
+        implementation 'com.google.firebase:firebase-database:19.2.1'
         
     }
 }
