--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:appCategory="game"
         android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713">
+        </meta-data>
+
         <activity
             android:name="com.mygdx.game.AndroidLauncher"
             android:label="@string/app_name" 
